--- a/GESTAON/src/styles/Login.css
+++ b/GESTAON/src/styles/Login.css
@@ -158,17 +158,32 @@ section a {
     font-weight: 600;
 }
 
+.login-box {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 90%;
+    max-width: 440px;
+    height: auto;
+    padding: 100px 30px 100px 30px; 
+    margin: 0 auto;
+    box-sizing: border-box;
+}
+
 footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     background-color: #222;
     color: #fff;
     text-align: center;
     padding: 20px 0 10px 0;
-    width: 100%;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     box-shadow: 0 -8px 20px rgba(0, 0, 0, 0.3);
-    flex-shrink: 0;
-    position: fixed;
+    z-index: 1000;
     display: flex;
     flex-direction: column;
     gap: 6px;
