--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,3 +18,9 @@ body {
     min-height: 100vh;
     background: #dfdfdf;
 }
+
+.app-container {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
