--- a/src/styles/Gestao.module.css
+++ b/src/styles/Gestao.module.css
@@ -10,9 +10,7 @@
 
 .content {
   flex: 1;
-  padding: 100px 40px 40px 40px;
-  margin-bottom: 70px;
-}
+  padding: 100px 40px 40px 40px}
 
 .headerSection {
   display: flex;
